RESOLVED FIXED124315
Fix the ARM64 build after recent JavaScriptCore changes
https://bugs.webkit.org/show_bug.cgi?id=124315
Summary Fix the ARM64 build after recent JavaScriptCore changes
Andy Estes
Reported 2013-11-13 15:28:36 PST
Fix the ARM64 build after recent JavaScriptCore changes
Attachments
Fix the ARM64 build after recent JavaScriptCore changes (15.09 KB, patch)
2013-11-13 15:37 PST, Andy Estes
msaboff: review+
Andy Estes
Comment 1 2013-11-13 15:37:23 PST
Created attachment 216874 [details] Fix the ARM64 build after recent JavaScriptCore changes
Michael Saboff
Comment 2 2013-11-13 16:10:11 PST
Comment on attachment 216874 [details] Fix the ARM64 build after recent JavaScriptCore changes View in context: https://bugs.webkit.org/attachment.cgi?id=216874&action=review r+, make the fixes noted. > Source/JavaScriptCore/assembler/MacroAssemblerARM64.h:539 > + lshift64(dest, shiftAmount, dest); This needs to be rshift64. > Source/JavaScriptCore/assembler/MacroAssemblerARM64.h:544 > + lshift64(dest, imm, dest); This needs to be rshift64.
Andy Estes
Comment 3 2013-11-13 16:42:25 PST
Note You need to log in before you can comment on or make changes to this bug.