Fix the ARM64 build after recent JavaScriptCore changes https://bugs.webkit.org/show_bug.cgi?id=124315

Reviewed by Michael Saboff.

Based on patches by myself, Filip Pizlo, Benjamin Poulain, and Michael Saboff.

* Configurations/JavaScriptCore.xcconfig: Hid the symbol for
std::bad_function_call.
* JavaScriptCore.xcodeproj/project.pbxproj: Marked
MacroAssemblerARM64.h and ARM64Assembler.h as Private headers.
* assembler/ARM64Assembler.h:
(JSC::ARM64Assembler::executableOffsetFor):
* assembler/MacroAssemblerARM64.h: Removed ARM64's executableCopy(),
which was removed from other assembler backends in r157690.
(JSC::MacroAssemblerARM64::shouldBlindForSpecificArch): Added.
(JSC::MacroAssemblerARM64::lshift64): Added.
(JSC::MacroAssemblerARM64::mul64): Added.
(JSC::MacroAssemblerARM64::rshift64): Added.
(JSC::MacroAssemblerARM64::convertInt64ToDouble): Added.
(JSC::MacroAssemblerARM64::branchMul64): Added.
(JSC::MacroAssemblerARM64::branchNeg64): Added.
(JSC::MacroAssemblerARM64::scratchRegisterForBlinding): Added.
* dfg/DFGSpeculativeJIT.cpp:
(JSC::DFG::SpeculativeJIT::compileArithDiv): Changed
SpeculateIntegerOperand to SpeculateInt32Operand,
nodeCanIgnoreNegativeZero() to bytecodeCanIgnoreNegativeZero(), and
nodeUsedAsNumber() to bytecodeUsesAsNumber().
(JSC::DFG::SpeculativeJIT::compileArithMod): Changed
nodeCanIgnoreNegativeZero() to bytecodeCanIgnoreNegativeZero().

Canonical link: https://commits.webkit.org/142532@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@159261 268f45cc-cd09-0410-ab3c-d52691b4dbfc